# tiny-ray-tracer

./: .gitignore  CMakeLists.txt  README.md  aabb.h  build.bat  bvh.h  camera.h  cmake.bat  cmake.sh  color.h  debug-info.txt  hittable.h  hittable_list.h  image - more defocus blur.ppm  image - ref.ppm  image.ppm  interval.h  main.cpp  mat4.h  material.h  mesh.h  model.h  ray.h  rtw_stb_image.h  rtweekend.h  sphere.h  texture.h  tlas.h  triangle.h  triangle.ppm  vec2.h  vec3.h  vec4.h
assets/: emissive-box.mtl  light_platforms.mtl
assets/box/: wooden-box.mtl
assets/cow/: cow.mtl
assets/crate/: crate.mtl
assets/eva/: EVA_01.mtl
assets/robo/: robo.mtl
assets/smiley/: smiley.mtl
assets/weird-cube/: weird-cube.mtl
assets/wood-box/: wooden-box.mtl
renders/: image - 256 robots 2.txt  image - cow 2.txt  image - four spheres.txt  image - robo fight high res.txt  image - robot 2.txt  image - simple lights.txt  image.ppm  logs.txt
